# accounts-repo

./: .env.example  .gitignore  .impeccable.md  Cargo.toml  README.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  wrangler.toml
.github/workflows/: ci.yml
auth-service/: package.json  tsconfig.json
auth-service/src/: app.ts  auth.ts  email.ts  server.ts
auth-service/tests/: internal-session.test.ts
backend/: Cargo.toml
backend/migrations/: 0001_initial.sql  0002_evidence_foundation.sql
backend/src/: actor.rs  api.rs  audit.rs  auth.rs  contract.rs  domain.rs  lib.rs  main.rs  persistence.rs  store.rs  store_support.rs
backend/tests/: api.rs  auth.rs  persistence.rs
docs/: architecture.md  cloudflare.md  design-simplification.md  github-depth-product-direction.md  product.md  production.md
e2e/: year-end-review.spec.ts
frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: _headers
frontend/src/: App.tsx  api.ts  auth-client.ts  format.ts  styles.css  types.ts
frontend/src/import/: ImportEmptyState.tsx  parseTrialBalanceCsv.ts
frontend/src/theme/: useColorTheme.ts
frontend/src/ui/: primitives.tsx
frontend/src/workspace/: ReviewWorkspace.tsx  WorkspaceShell.tsx  helpers.ts  tabs.ts
frontend/tests/: App.test.tsx  format.test.ts  parseTrialBalanceCsv.test.ts
functions/api/: [[path]].js
